# godseeot

./: ALL_WORK_COMPLETED.md  CHANGELOG.md  COMPLETED_IMPROVEMENTS.md  COMPLETE_WORK_SUMMARY.md  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_MONETIZATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION.md  INSTRUCTION_RU.md  INSTRUCTION_RU.md.bak_from_current_20251204T105314Z  INTEGRATION_CHECK.md  LICENSE.txt  MONETIZATION_COMPLETE.md  MONETIZATION_IMPLEMENTATION.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_RU.md  SERVER_IMPROVEMENTS.md  docker-compose.yml  main.py  pyproject.toml  replit.md  run_services.py  server.py
db/: migrate_islands.py  schema_islands.sql
gateway/: Dockerfile  go.mod  go.sum  main.go
godot_client_3d/: ASSETS_COMPLETE_GUIDE.md  ASSETS_DOWNLOAD_LINKS.md  ASSETS_DOWNLOAD_SCRIPT.md  ASSETS_INTEGRATION_GUIDE.md  INTEGRATION_STATUS.md  QUICK_START_ASSETS.md  README.md  World.tscn  campfire.tscn  hud.gd.uid  hud.tscn  palm_tree.tscn  player.gd  player.gd.uid  project.godot  rock.tscn
godot_server/: Dockerfile  ISLANDS_README.md  placeholder_ws.py  project.godot  server.gd  server.gd.bak_from_current_20251204T105314Z
instance_manager/: Dockerfile  app.py
island_service/: app.py  example_client.py
monitoring/: prometheus.yml
nakama_runtime/: validate_session.lua  validate_session.lua.bak_from_current_20251204T105314Z
payment_service/: Dockerfile  README.md  app.py  requirements.txt
redis/: token_bucket.lua
scripts/: README.md  check_stack.sh  install_ubuntu.sh  install_windows.ps1  run_all.ps1  run_all.sh  stop_all.ps1  stop_all.sh
(+1166 files in other folders)
